fixed bouncing borders on small screens and update speeds

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     transform:translate(-50%,-50%);
     height: 10vh;
     width:30vw;
-    border:2px solid rgb(255, 255, 255, 0.6);
+    border: 3px solid rgba(182, 165, 165, 0.6);
 }
 .name {
     position:absolute;
@@ -90,11 +90,11 @@ body {
 
 /* About Me box  */
 .x2 {
-    animation: x2 6s linear infinite alternate;
+    animation: x2 5s linear infinite alternate;
     display: hidden;
 }
 .y2 {
-    animation: y2 7s linear infinite alternate;
+    animation: y2 20s linear infinite alternate;
 }
 @keyframes x2 {
 100% {
@@ -166,11 +166,11 @@ body {
 
 /* Contact box */
 .x6 {
-    animation: x6 18s linear infinite alternate;
+    animation: x6 15s linear infinite alternate;
     display: hidden;
 }
 .y6 {
-    animation: y6 4s linear infinite alternate;
+    animation: y6 16s linear infinite alternate;
 }
 @keyframes x6 {
 100% {
@@ -182,6 +182,7 @@ body {
     transform: translateY( calc(100vh - 70px) );
 }
 }
+
 @media only screen and (max-width: 768px) {
     .name {
         width: 60vw;
@@ -193,6 +194,11 @@ body {
     @keyframes x {
         100% {
             transform: translateX( calc(100vw - 60vw) );
+        }
+    }
+    @keyframes y {
+        100% {
+            transform: translateY( calc(100vh - 10vh) );
         }
     }
 }
@@ -209,6 +215,11 @@ body {
             transform: translateX( calc(100vw - 50vw) );
         }
     }
+    @keyframes y {
+        100% {
+            transform: translateY( calc(100vh - 13vh) );
+        }
+    }
 }
 @media only screen and (min-width: 992px) {
     .name {
@@ -223,6 +234,11 @@ body {
             transform: translateX( calc(100vw - 55vw) );
         }
     }
+    @keyframes y {
+        100% {
+            transform: translateY( calc(100vh - 15vh) );
+        }
+    }
 }
 @media only screen and (min-width: 1200px) {
     .name {
@@ -235,6 +251,11 @@ body {
     @keyframes x {
         100% {
             transform: translateX( calc(100vw - 40vw) );
+        }
+    }
+    @keyframes y {
+        100% {
+            transform: translateY( calc(100vh - 17vh) );
         }
     }
 }
